--- a/Nov19.html
+++ b/Nov19.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nov19 Project – My Daily Activity</title>
+    <title>My Daily Activity</title>
 </head>
 <body>
     <header>
